--- a/inst/rmarkdown/templates/revealjs_presentation/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/revealjs_presentation/skeleton/skeleton.Rmd
@@ -9,7 +9,7 @@ output:
     center: true
     self_contained: false
     lib_dir: libs
-    reveal_plugins: ["zoom","note"]
+    reveal_plugins: ["zoom","notes"]
 ---
 
 ## R Markdown {data-background-transition="zoom" data-background="#4d7e65" data-transition="fade"}
